# ibus-zinnia

./: configure.ac
src/: Makefile.am  engine.c  engine.h  main.c  zinnia.xml.in.in  zinnia_component.c  zinnia_component.h
